hphp/hack/test/typecheck/first_class_polymorphism/polymorphic_lambda_not_enabled.php
<?hh

function foo(): void {
  $_ =  function<T>(T $x):T ==> $x;
}
